--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>San Martín Alto Mayo - Maravilla Natural</title>
-    <link rel="stylesheet" href="cs/stiles.css">
+    <link rel="stylesheet" href="css/stiles.css">
 </head>
 <body>
     <header>
@@ -146,7 +146,6 @@
     
     <footer>
         <p>&copy; 2025 San Martín Alto Mayo - Todos los derechos reservados</p>
-        <p>Contacto: info@sanmartinaltomayo.com</p>
     </footer>
 </body>
 </html>
