--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
     
     <footer>
-        <p>&copy; 2025 San Martín Alto Mayo - Todos los derechos reservados</p>
+        <p>&copy; 2025 San Martín Alto Mayo - Creado por Abrahan</p>
     </footer>
 </body>
 </html>
